<resources>
    <string name="app_name">Breathe Light</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Breathe Light</string>
    <string name="nav_header_subtitle">Fall asleep faster and easier</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="communicate_header">Communicate</string>



    <string name="menu_home">Breathe Light</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>

    <string-array name="time_array">
        <item>10 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
    </string-array>

    <string name="duration_header">Duration</string>
    <string name="starting_rhythm_header">Starting Breaths/Min</string>
    <string name="ending_rhythm_header">Target Breaths/Min</string>
    <string name="colour_picker_header">Light Color</string>
    <string name="colour_picker_desc">Light Colour Picker Button</string>
    <string name="start_button_text">Start</string>

    <string name="colour_picker_button_yellow_desc">Yellow Colour Picker Button</string>
    <string name="colour_picker_button_white_desc">White Colour Picker Button</string>
    <string name="colour_picker_button_blue_desc">Blue Colour Picker Button</string>
    <string name="colour_picker_button_green_desc">Green Colour Picker Button</string>
    <string name="colour_picker_button_red_desc">Red Colour Picker Button</string>
    <string name="colour_picker_button_purple_desc">Purple Colour Picker Button</string>

    <string name="pulsing_light_description">Coloured background which changes from visible to invisible, and back again, to breathing rhythm</string>
    <string name="stop_button_text">STOP</string>
    <string name="stop_button_text_end">BACK</string>

    <string name="license_button_text">View License</string>
    <string name="view_source_button_text">View Source Code</string>

    <string name="share_button_text">Share</string>
    <string name="share_message">Breathe Light App: Match your breathing rhythm to a light to fall asleep faster and easier - https://play.google.com/store/apps/details?id=com.belugaperks.breathelight_sleepassist</string>


    <string name="preferences_file_key">LightPulseActivityKey</string>


    <string name="about_text_1">Breathe Light allows you to focus your attention outside of your body, slowing your breathing to a rhythm that naturally facilitates sleep.</string>
    <string name="about_text_2">By focusing OUTSIDE of your body, you are able to enter a meditative state easier, with less possibility of your mind wandering and losing focus on your breathing.</string>
    <string name="about_text_3">Simply select your preferred settings for duration, starting breaths/minute (BPM), goal breaths/minute, and light colour, and match your breathing to the pulsing light. Breathe in as the light gets brighter, and out as it dims.</string>
    <string name="about_text_4">The recommended settings are a 10 or 20 minute duration, 11 starting breaths/minute, and 6 goal breaths/minute.</string>
    <string name="about_text_5">The pulsing light will adjust over the first 5 minutes from your starting BPM to your goal BPM, then continue at your goal BPM for the remainder of the duration.</string>
    <string name="about_text_6">BreatheLight is open source, developed under the GNU General Public License. Feel free to run, study, share, and modify the software.</string>
</resources>
